--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,11 @@
             Manage Order<span class="caret"></span>
             </button>
             <ul class='dropdown-menu'>
-                <li><a href='#'></a>To Shopping List</li>
+               
+                <li><a                     
+                    (click)="onAddToShoppingList()"
+                    style="cursor: pointer;"
+                    ></a>To Shopping List</li>
                 <li><a href='#'></a>Edit Order</li>
                 <li><a href='#'></a>Delete Order</li>
             </ul>
@@ -37,6 +41,12 @@
 </div>
 <div class='row'>
     <div class='col-xs-12'>
-        Foods
+        <ul class='list-group'>
+            <li 
+            class='list-group-item'
+            *ngFor="let ingredient of recipe.ingredients">
+            {{ ingredient.name }} - {{ ingredient.amount }}
+            </li>
+        </ul>
     </div>
 </div>
