--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,3 @@
-<!-- here is the display a selected recipe for details -->
-
 <div class='row'>
    <div class='col-xs-12'>
        <img [src]='recipe.imagePath' 
@@ -8,11 +6,13 @@
        style="max-height: 300px;">
    </div>
 </div>
+
 <div class='row'>
     <div class='col-xs 12'>
         <h1>{{ recipe.name }}</h1>
     </div>
 </div>
+
 <div class='row'>
     <div class='col-xs-12'>
         <div class='btn-group'
@@ -20,25 +20,26 @@
             <button 
             type="button" 
             class="btn btn-primary" dropdown-toggle>
-            Manage Order<span class="caret"></span>
+            Manage Recipe <span class="caret"></span>
             </button>
-            <ul class='dropdown-menu'>
-               
+            <ul class='dropdown-menu'>               
                 <li><a                     
                     (click)="onAddToShoppingList()"
                     style="cursor: pointer;"
-                    ></a>To Shopping List</li>
-                <li><a href='#'></a>Edit Order</li>
-                <li><a href='#'></a>Delete Order</li>
+                    >To Shopping List</a></li>
+                <li><a style="cursor: pointer;">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
 </div>
+
 <div class='row'>
     <div class='col-xs-12'>
         {{ recipe.description }}
     </div>
 </div>
+
 <div class='row'>
     <div class='col-xs-12'>
         <ul class='list-group'>
