--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,7 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class='container'>        
     <div class='row'>
-        <div class='col-mid-12'>
-            <!-- <ul class="nav nav-tabs">
-                <li role="presentation", class="active"><a href="recipes">Recipes</a></li>
-                <li role="presentation", class="active"><a href="shopping-list">Shopping List</a></li>
-            </ul> -->
-
-
-            <!-- <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-            <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list> -->
-
+        <div class='col-mid-12'>      
             <router-outlet></router-outlet>
         </div>       
     </div>    
