feat: handling form

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -16,7 +16,7 @@
               <div class='col-sm-5 form-group'>
                   <label for="amount">Amount</label>
                   <input 
-                  type="text" 
+                  type="number" 
                   id="amount"
                   name="amount" 
                   class="form-control"
